tests/samples/negative/types/noncopy_bytes_copy.ax
module noncopy_bytes_copy;

import std.core.bytes as bytes;
import std.core.result as result;
import std.core.text as text;

fn run() -> result::Result<i32, i32> {
    var first: bytes::Bytes = bytes::Bytes.from_span(text::c_span(c"owned"))?;
    var second: bytes::Bytes = first;
    second.destroy();
    return Result.ok(0);
}

fn main() -> i32 {
    return match run() {
        .ok(code) => code,
        .err(code) => code,
    };
}
